config/sample-app/example-network-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  annotations:
    kubernetes.digitalocean.com/load-balancer-id: "your-load-balancer-id"
    service.beta.kubernetes.io/do-loadbalancer-type: "REGIONAL_NETWORK" # DigitalOcean Network Load Balancer
    service.beta.kubernetes.io/do-loadbalancer-size-unit: "1"
    # Scale by TCP throughput observed by DigitalOcean Monitoring
    doks-lb-scale/metric: "frontend_nlb_tcp_network_throughput"
    doks-lb-scale/target-per-node: "nlb=45"
    doks-lb-scale/hysteresis-percent: "20"
    doks-lb-scale/min-nodes: "1"
    doks-lb-scale/max-nodes: "50"
    doks-lb-scale/scale-down-delay-minutes: "10"
spec:
  type: LoadBalancer
  selector:
    app: whoami-service
  ports:
    - port: 80
      targetPort: 80
