config/sample-app/whoami-service.yml
apiVersion: v1
kind: Service
metadata:
  name: whoami-service
spec:
  type: ClusterIP
  selector:
    app: whoami
  ports:
    - name: http
      port: 80
      targetPort: 80
